fix up for gap in PWA

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -794,7 +794,7 @@ input[type="text"]:focus {
     /* Target PWA specifically */
     @media all and (display-mode: standalone) {
         .chat-input-area {
-            padding-bottom: calc(1.5rem + 130px + env(safe-area-inset-bottom, 40px));
+            padding-bottom: calc(1.5rem + 100px + env(safe-area-inset-bottom, 40px));
         }
 
         .room-header {
